# jarvis-device

./: .gitignore  CLAUDE.md  CMakeLists.txt  README.md  convo.txt  enable_l2cap.sh  l2cap-diff.txt  partitions.csv  sdkconfig  sdkconfig.l2cap
main/: CMakeLists.txt  Kconfig.projbuild  audio_tone.c  audio_tone.h  bluetooth.c  bluetooth.h  idf_component.yml  main.c  wake_word_engine.c
main/include/: afe_setup.h  app_ble.h  audio_io.h  audio_pipeline.h  audio_rx.h  audio_tx.h  common.h  config.h  gatt_svc.h  i2s_setup.h  keepalive.h  l2cap_server.h  l2cap_stream.h  task_info.h  wakeword_handler.h
main/src/: afe_setup.c  app_ble.c  audio_io.c  audio_pipeline.c  audio_rx.c  audio_tone.c  audio_tx.c  config.c  gap.c  gatt_svc.c  i2s_setup.c  keepalive.c  l2cap_server.c  l2cap_stream.c  wakeword_handler.c
